--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "portfolio__2",
   "version": "1.0.0",
   "description": "",
-  "main": "gulpfile.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -23,5 +23,8 @@
     "gulp-sass": "^5.1.0",
     "gulp-sourcemaps": "^3.0.0",
     "sass": "^1.63.6"
+  },"devDependencies": {
+    "gulp-sass": "^5.1.0",
+    "sass": "^1.51.0"
   }
 }
